public/css/style.css
body {
  margin:0;
}
#slides {
  margin:0;
  background-color:black;
}

.slide {
  background-image:url('/images/logo.png');
  background-repeat:no-repeat;
  color:white;
  font-size:200%;
  margin: 0 auto;
  height:500px;
  width:500px;
  padding: 15% 10% 2% 10%;
  border: 5px solid white;
  -moz-border-radius: 15px;
  border-radius: 15px;
  line-height:150%;
}

.left {
  padding-left:20%;
}
.right {
  width:20%;
  text-align:left;
  float:right;
}

#items {
  border: 3px solid black;
  border-radius: 15px;
}

#item {
  border-bottom: 1px solid black;
  padding:5px;
}

